--- a/views/mine/mine.html
+++ b/views/mine/mine.html
@@ -122,6 +122,8 @@
     var username = $.cookie('username')
     if (username != undefined) {
         $('.login').css('display','none')
+    }else{
+        $('main').css('display','none')
     }
     $('footer>div:nth-of-type(1)>i').css({
             background:'url(/imges/首页-推荐/nav-1b.png)',
@@ -145,6 +147,7 @@
             if(data=='登录成功'){
                 
                 $('.login').css('display','none')
+                $('main').css('display','block')
             }
         })
     })
