--- a/views/mine/mine.html
+++ b/views/mine/mine.html
@@ -181,6 +181,9 @@
     $('.myServe li').eq(2).click(function(){
         location.href='/come_buy'
     })
+    $('.myServe li').eq(3).click(function(){
+        location.href='/dh'
+    })
 </script>
 </body>
 
