--- a/views/fleshiness.html
+++ b/views/fleshiness.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script src="/data/fleshinessData.js"></script>
+
 </head>
 
 <body>
@@ -44,8 +44,9 @@
 
         <div class="activity">
             <p>活动专区</p>
-            <div><img src="/imges/首页-绿植/new.png" alt="">
-                <img src="/imges/首页-绿植/sale.png" alt="">
+            <div>
+                <section><img src="/imges/首页-绿植/new.png" alt=""></section>
+                <section><img src="/imges/首页-绿植/sale.png" alt=""></section>
             </div>
         </div>
         <!-- 活动专区部分 -->
