--- a/views/snsContent.html
+++ b/views/snsContent.html
@@ -49,8 +49,8 @@
     <div class="container">
         <ul class="show">
             <li>
-                <p class="user"><img class="userPic" src="{{data.userPic}}"><span>{{data.name}}</span><span>关注</span></p>
-                <img src="{{data.img}}" alt="">
+                <p class="user"><img class="userPic" src="{{data.pic}}"><span>{{data.username}}</span><span>关注</span></p>
+                <img src="{{data.pic}}" alt="">
                 <p class="msg">{{data.msg}}</p>
                 <p class="time">{{data.time}}</p>
                 <p class="commit">添加评论....</p>
