--- a/views/community.html
+++ b/views/community.html
@@ -37,70 +37,29 @@
         <div class="container">
             <!-- 最新部分 -->
             <div class="news">
-                <ul class="left">
-                    {{each data.left item}}
-                    <li class="cet" data-id="{{item.name}}"><img src="{{item.img}}" alt="">
+                <ul>
+                    {{each data item}}
+                    <li class="cet" data-id="{{item.username}}"><img src="/{{item.pic}}" alt="" class="show"> {{if item.tip}}
+                        <span class="tip">{{item.tip}}</span> {{/if}}
                         <p class="msg">{{item.msg}}</p>
-                        <p class="user"><img src="{{item.userPic}}" alt=""><span>{{item.name}}</span><span><img class="like" src="/imges/社区-首页/heart.png"> <i>{{item.like}}</i></span></p>
+                        <p class="user"><img src="{{item.userPic}}" alt=""><span>{{item.username}}</span><span><img class="like" src="/imges/社区-首页/heart.png"> <i>{{item.like}}</i></span></p>
                     </li>
                     {{/each}}
                 </ul>
-                <ul class="right">
-                    {{each data.right item}}
-                    <li class="cet" data-id="{{item.name}}"><img src="{{item.img}}" alt="">
+            </div>
+            <!-- 推荐部分 -->
+            <div class="recommend" style="display: none;">
+                <ul>
+                    {{each data item}}
+                    <li class="cet" data-id="{{item.username}}"><img src="/{{item.pic}}" alt="" class="show"> {{if item.tip}}
+                        <span class="tip">{{item.tip}}</span> {{/if}}
                         <p class="msg">{{item.msg}}</p>
-                        <p class="user"><img src="{{item.userPic}}" alt=""><span>{{item.name}}</span><span><img class="like" src="/imges/社区-首页/heart.png"> <i>{{item.like}}</i></span></p>
+                        <p class="user"><img src="{{item.userPic}}" alt=""><span>{{item.username}}</span><span><img class="like" src="/imges/社区-首页/heart.png"> <i>{{item.like}}</i></span></p>
                     </li>
                     {{/each}}
                 </ul>
+            </div>
 
-            </div>
-            <!-- 推荐部分 -->
-            <div class="recommend" style="display: none;">
-                <ul class="left">
-                    {{each data.right item}}
-                    <li class="cet" data-id="{{item.name}}"><img src="{{item.img}}" alt="">
-                        <p class="msg">{{item.msg}}</p>
-                        <p class="user"><img src="{{item.userPic}}" alt=""><span>{{item.name}}</span><span><img class="like" src="/imges/社区-首页/heart.png"> <i>{{item.like}}</i></span></p>
-                    </li>
-                    {{/each}}
-                </ul>
-                <ul class="right">
-                    {{each data.left item}}
-                    <li class="cet" data-id="{{item.name}}"><img src="{{item.img}}" alt="">
-                        <p class="msg">{{item.msg}}</p>
-                        <p class="user"><img src="{{item.userPic}}" alt=""><span>{{item.name}}</span><span><img class="like" src="/imges/社区-首页/heart.png"> <i>{{item.like}}</i></span></p>
-                    </li>
-                    {{/each}}
-                </ul>
-            </div>
-            <!-- 关注部分 -->
-            <div class="attention" style="display: none;">
-                <ul class="show-card">
-                    {{each data.attention item}}
-                    <li>
-                        <p><img src="/imges/社区-首页/logo.jpg" alt=""><span>FLŌWERPLUS</span><span>Lv.1</span></p>
-                        <img src="{{item.img}}" alt="">
-                        <span>{{item.tip}}</span>
-                        <p>{{item.msg}}</p>
-                        <p>{{item.time}}
-                            <span>
-                                <img class="star" src="/imges/社区-首页/star.png" alt="">
-                                <sup class="starNum" data-id="{{item.star}}">{{item.star}}</sup>
-                            </span>
-                            <span>
-                                <img class="like" src="/imges/社区-首页/like.png" alt="">
-                                <sup class="likeNum">{{item.like}}</sup>
-                            </span>
-                        </p>
-                        {{if item.commit}}
-                        <p class="commit">{{item.commit}}</p>
-                        {{/if}}
-                        <p class="addCommit">添加评论....</p>
-                    </li>
-                    {{/each}}
-                </ul>
-            </div>
         </div>
 
     </main>
@@ -176,7 +135,7 @@
 
         })
 
-        $('.cet').click(function() {
+        $('.cet').find('.show').click(function() {
             location.href = '/snsContent?name=' + $(this).data('id')
         })
 
