第三次小工具

--- a/views/moreF.html
+++ b/views/moreF.html
@@ -4,7 +4,7 @@
 
     <div class="show_box">
         {{each flash item a}}
-        <div class="list toDetail" data-id="moreF/{{a}}">
+        <div class="list toDetail" data-id="moreF/{{item.id}}">
             <div class="list_img">
                 <img src="{{item.img[0]}}" alt="">
                 <p class="tips">{{item.top}}</p>
