--- a/views/community-me.html
+++ b/views/community-me.html
@@ -1,7 +1,7 @@
 {{include './community-common.html'}}
 <style>
     .header {
-        background-image: url(https://oss.flowerplus.cn/oss_jpg/2019-03-01/15514334642699.jpg!750);
+        background-image: url(/imges/发现/社区/bg.jpg);
         width: 100%;
         background-repeat: no-repeat;
         background-position: center center;
@@ -145,14 +145,14 @@
         <div class="user_info">
             <div class="user_info_box">
                 <div class="user">
-                    <img src="https://oss.flowerplus.cn/oss_png/2019-05-23/15585981426066.png!57_57" alt="">
+                    <img src="/imges/发现/社区/user.png" alt="">
                 </div>
                 <div class="username">
                     手机用户<span>Lv.1</span>
                 </div>
             </div>
             <div class="btn">
-                <div class="icon"><img src="https://oss.flowerplus.cn/oss_svg/2019-02-19/15505426447364.svg" alt="">
+                <div class="icon"><img src="/imges/发现/社区/do.svg" alt="">
                 </div>
                 <div>编辑</div>
             </div>
@@ -185,7 +185,7 @@
 <main class="main1">
     <div class="no-result">
         <div class="pic">
-            <img src="https://oss.flowerplus.cn/oss_svg/2019-03-01/15514287051119.svg" alt="">
+            <img src="/imges/发现/社区/bg2.svg" alt="">
         </div>
         <p class="text">点击下方 “+” ，发布你的第一篇帖子吧</p>
     </div>
@@ -193,7 +193,7 @@
 <main class="main2">
     <div class="no-result">
         <div class="pic">
-            <img src="https://oss.flowerplus.cn/oss_svg/2019-03-01/15514287126935.svg" alt="">
+            <img src="/imges/发现/社区/bg3.svg" alt="">
         </div>
         <p class="text">收藏夹空空如也</p>
     </div>
