--- a/views/home.html
+++ b/views/home.html
@@ -42,7 +42,7 @@
             {{each news datas}}
             <li class="swiper-slide" role="group" aria-label="({{index}}+1) /3"  >
                 {{each datas items}}
-                <div class="lb-box toDetail"  data-id="home/1-{{index}}">
+                <div class="lb-box toDetail"  data-id="home/{{items.id}}">
                     <div class="img">
                         <img src="{{items.img[0]}}" alt="">
                         <div>NEW</div>
@@ -72,7 +72,7 @@
 <div class="show_box">
     <h1>热卖专区</h1>
     {{each list item }}
-    <div class="list toDetail" data-id="home/{{index}}">
+    <div class="list toDetail" data-id="home/{{item.id}}">
         <div class="list_img">
             <img src="{{item.img[0]}}" alt="">
             <p class="tips">{{item.top}}</p>
