--- a/views/detailPage.html
+++ b/views/detailPage.html
@@ -99,7 +99,7 @@
     </div>
     <div class="buy-show">
         <div>
-            <img src="{{data.banner[0]}}">
+            <img src="{{/imges/详情页/data.banner[0]}}">
             <span>{{data.price}}</span>
             <i class="glyphicon glyphicon-remove close-show"></i>
         </div>
