--- a/views/mine/mine.html
+++ b/views/mine/mine.html
@@ -28,7 +28,7 @@
                     <div class="mineCompile">编辑</div>
                 </div>
                 <p>手机用户</p>
-                <section>进入会员中心<img src="/imges/我的/right.svg" alt=""></section>
+                <section class="mineMember">进入会员中心<img src="/imges/我的/right.svg" alt=""></section>
             </div>
             <ul>
                 <li>
@@ -183,6 +183,9 @@
     })
     $('.myServe li').eq(3).click(function(){
         location.href='/dh'
+    })
+    $('.mineMember').click(function(){
+        location.href='/mineMember'
     })
 </script>
 </body>
