--- a/views/Administrator/header.html
+++ b/views/Administrator/header.html
@@ -19,7 +19,7 @@
     </div>
     <div>
         <ul class="nav navbar-nav pull-right">
-            <li><a href="#"><i class="glyphicon glyphicon-home"></i> 首页</a></li>
+            <li><a href="/admin"><i class="glyphicon glyphicon-home"></i> 首页</a></li>
         </ul>
     </div>
   </div>
