--- a/views/snsContent.html
+++ b/views/snsContent.html
@@ -49,7 +49,7 @@
     <div class="container">
         <ul class="show">
             <li>
-                <p class="user"><img class="userPic" src="{{data.pic}}"><span>{{data.username}}</span><span>关注</span></p>
+                <p class="user"><img class="userPic" src="{{data.userPic}}"><span>{{data.username}}</span><span>关注</span></p>
                 <img src="{{data.pic}}" alt="">
                 <p class="msg">{{data.msg}}</p>
                 <p class="time">{{data.time}}</p>
