--- a/views/community.html
+++ b/views/community.html
@@ -36,25 +36,70 @@
     <main>
         <div class="container">
             <!-- 最新部分 -->
+
             <div class="news">
-                <ul>
-                    {{each data item}}
-                    <li class="cet" data-id="{{item.username}}"><img src="/{{item.pic}}" alt="" class="show"> {{if item.tip}}
+
+                <div class="left">
+                    {{each data item index}} {{if index%2==0}}
+                    <section class="cet" data-id="{{item.username}}"><img src="/{{item.pic}}" alt="" class="show"> {{if item.tip}}
                         <span class="tip">{{item.tip}}</span> {{/if}}
                         <p class="msg">{{item.msg}}</p>
                         <p class="user"><img src="{{item.userPic}}" alt=""><span>{{item.username}}</span><span><img class="like" src="/imges/社区-首页/heart.png"> <i>{{item.like}}</i></span></p>
-                    </li>
-                    {{/each}}
-                </ul>
+                    </section>
+                    {{/if}} {{/each}}
+                </div>
+
+                <div class="right">
+                    {{each data item index}} {{if index%2!==0}}
+                    <section class="cet" data-id="{{item.username}}"><img src="/{{item.pic}}" alt="" class="show"> {{if item.tip}}
+                        <span class="tip">{{item.tip}}</span> {{/if}}
+                        <p class="msg">{{item.msg}}</p>
+                        <p class="user"><img src="{{item.userPic}}" alt=""><span>{{item.username}}</span><span><img class="like" src="/imges/社区-首页/heart.png"> <i>{{item.like}}</i></span></p>
+                    </section>
+                    {{/if}} {{/each}}
+                </div>
+
+
             </div>
             <!-- 推荐部分 -->
             <div class="recommend" style="display: none;">
-                <ul>
-                    {{each data item}}
-                    <li class="cet" data-id="{{item.username}}"><img src="/{{item.pic}}" alt="" class="show"> {{if item.tip}}
+
+                <div class="left">
+                    {{each data.reverse() item index}} {{if index%2==0}}
+                    <section class="cet" data-id="{{item.username}}"><img src="/{{item.pic}}" alt="" class="show"> {{if item.tip}}
                         <span class="tip">{{item.tip}}</span> {{/if}}
                         <p class="msg">{{item.msg}}</p>
                         <p class="user"><img src="{{item.userPic}}" alt=""><span>{{item.username}}</span><span><img class="like" src="/imges/社区-首页/heart.png"> <i>{{item.like}}</i></span></p>
+                    </section>
+                    {{/if}} {{/each}}
+                </div>
+
+                <div class="right">
+                    {{each data item index}} {{if index%2!==0}}
+                    <section class="cet" data-id="{{item.username}}"><img src="/{{item.pic}}" alt="" class="show"> {{if item.tip}}
+                        <span class="tip">{{item.tip}}</span> {{/if}}
+                        <p class="msg">{{item.msg}}</p>
+                        <p class="user"><img src="{{item.userPic}}" alt=""><span>{{item.username}}</span><span><img class="like" src="/imges/社区-首页/heart.png"> <i>{{item.like}}</i></span></p>
+                    </section>
+                    {{/if}} {{/each}}
+                </div>
+
+
+            </div>
+
+
+
+            <!-- 关注部分 -->
+            <div class="attention" style="display: none;">
+                <ul class="show-card">
+                    {{each data item}}
+                    <li data-id="{{item.username}}">
+                        <p><img src="{{item.userPic}}" alt="" class="userpic"><span>{{item.username}}</span><span class="level">Lv1</span></p>
+                        <img src="{{item.pic}}" alt=""> {{if item.tip}}
+                        <span class="tip">{{item.tip}}</span>{{/if}}
+                        <p class="msg">{{item.msg}}</p>
+                        <p>{{item.time}}<span><img class="star" src="/imges/社区-首页/star.png" alt=""><sup>{{item.star}}</sup></span><span><img class="like" src="/imges/社区-首页/like.png" alt=""><sup>{{item.like}}</sup></span></p>
+                        <p>添加评论....</p>
                     </li>
                     {{/each}}
                 </ul>
@@ -104,39 +149,34 @@
             $('.recommend').css('display', 'flex').siblings().css('display', 'none')
         })
 
-        var isChange = true
+
         $('.star').click(function() {
-            if (isChange) {
-                $(this).attr('src', "/imges/社区-首页/star.svg")
-                $(this).next().text($(this).next().text() * 1 + 1)
-                isChange = !isChange
-                return isChange
-            } else {
+            if ($(this).attr('src') == "/imges/社区-首页/star.svg") {
                 $(this).attr('src', "/imges/社区-首页/star.png")
                 $(this).next().text($(this).next().text() * 1 - 1)
-                isChange = !isChange
-                return isChange
+
+            } else {
+                $(this).attr('src', "/imges/社区-首页/star.svg")
+                $(this).next().text($(this).next().text() * 1 + 1)
             }
         })
 
-        var isChange2 = true
+
         $('.like').click(function() {
-            if (isChange2) {
-                $(this).attr('src', "/imges/社区-首页/like.svg")
-                $(this).next().text($(this).next().text() * 1 + 1)
-                isChange2 = !isChange2
-                return isChange2
-            } else {
+            if ($(this).attr('src') == "/imges/社区-首页/like.svg") {
                 $(this).attr('src', "/imges/社区-首页/like.png")
                 $(this).next().text($(this).next().text() * 1 - 1)
-                isChange2 = !isChange2
-                return isChange2
+
+            } else {
+                $(this).attr('src', "/imges/社区-首页/like.svg")
+                $(this).next().text($(this).next().text() * 1 + 1)
             }
 
         })
 
         $('.cet').find('.show').click(function() {
-            location.href = '/snsContent?name=' + $(this).data('id')
+            location.href = '/snsContent?username=' + $(this).parent().data('id')
+                // console.log($(this).parent().parent())
         })
 
         // $(window).scroll(function() {
