--- a/views/community.html
+++ b/views/community.html
@@ -41,7 +41,7 @@
 
                 <div class="left">
                     {{each data item index}} {{if index%2==0}}
-                    <section class="cet" data-id="{{item.username}}"><img src="/{{item.pic}}" alt="" class="show"> {{if item.tip}}
+                    <section class="cet" data-id="{{item.time}}"><img src="/{{item.pic}}" alt="" class="show"> {{if item.tip}}
                         <span class="tip">{{item.tip}}</span> {{/if}}
                         <p class="msg">{{item.msg}}</p>
                         <p class="user"><img src="{{item.userPic}}" alt=""><span>{{item.username}}</span><span><img class="like" src="/imges/社区-首页/heart.png"> <i>{{item.like}}</i></span></p>
@@ -51,7 +51,7 @@
 
                 <div class="right">
                     {{each data item index}} {{if index%2!==0}}
-                    <section class="cet" data-id="{{item.username}}"><img src="/{{item.pic}}" alt="" class="show"> {{if item.tip}}
+                    <section class="cet" data-id="{{item.time}}"><img src="/{{item.pic}}" alt="" class="show"> {{if item.tip}}
                         <span class="tip">{{item.tip}}</span> {{/if}}
                         <p class="msg">{{item.msg}}</p>
                         <p class="user"><img src="{{item.userPic}}" alt=""><span>{{item.username}}</span><span><img class="like" src="/imges/社区-首页/heart.png"> <i>{{item.like}}</i></span></p>
@@ -66,7 +66,7 @@
 
                 <div class="left">
                     {{each data.reverse() item index}} {{if index%2==0}}
-                    <section class="cet" data-id="{{item.username}}"><img src="/{{item.pic}}" alt="" class="show"> {{if item.tip}}
+                    <section class="cet" data-id="{{item.time}}"><img src="/{{item.pic}}" alt="" class="show"> {{if item.tip}}
                         <span class="tip">{{item.tip}}</span> {{/if}}
                         <p class="msg">{{item.msg}}</p>
                         <p class="user"><img src="{{item.userPic}}" alt=""><span>{{item.username}}</span><span><img class="like" src="/imges/社区-首页/heart.png"> <i>{{item.like}}</i></span></p>
@@ -76,7 +76,7 @@
 
                 <div class="right">
                     {{each data item index}} {{if index%2!==0}}
-                    <section class="cet" data-id="{{item.username}}"><img src="/{{item.pic}}" alt="" class="show"> {{if item.tip}}
+                    <section class="cet" data-id="{{item.time}}"><img src="/{{item.pic}}" alt="" class="show"> {{if item.tip}}
                         <span class="tip">{{item.tip}}</span> {{/if}}
                         <p class="msg">{{item.msg}}</p>
                         <p class="user"><img src="{{item.userPic}}" alt=""><span>{{item.username}}</span><span><img class="like" src="/imges/社区-首页/heart.png"> <i>{{item.like}}</i></span></p>
@@ -104,7 +104,6 @@
                     {{/each}}
                 </ul>
             </div>
-
         </div>
 
     </main>
@@ -175,7 +174,7 @@
         })
 
         $('.cet').find('.show').click(function() {
-            location.href = '/snsContent?username=' + $(this).parent().data('id')
+            location.href = '/snsContent?time=' + $(this).parent().data('id')
                 // console.log($(this).parent().parent())
         })
 
