--- a/views/header.html
+++ b/views/header.html
@@ -9,6 +9,7 @@
     <script src="/bootstrap-3.3.7-dist/js/jquery-3.1.1.js"></script>
     <script src="/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
     <script src="/bootstrap-3.3.7-dist/js/jquery.cookie.js"></script>
+    <link rel="shortcut icon" href="/imges/favicon.icon" type="image/x-icon" s>
     <style>
         * {
             margin: 0;
@@ -59,11 +60,12 @@
             text-decoration: none;
             letter-spacing: 2px;
         }
-
-        header a:focus{
+        
+        header a:focus {
             color: black;
             text-decoration: none;
         }
+        
         body {
             padding: 6vh 0 7.5vh 0;
         }
@@ -76,7 +78,6 @@
             bottom: 0;
             display: flex;
             justify-content: space-around;
-
             z-index: 99;
         }
         
@@ -85,10 +86,12 @@
             font-size: 12px;
             text-decoration: none;
         }
-        footer a:focus{
+        
+        footer a:focus {
             color: #888888;
             text-decoration: none;
         }
+        
         footer div {
             padding-top: 6px;
         }
