--- a/views/community.html
+++ b/views/community.html
@@ -98,7 +98,7 @@
                         <img src="{{item.pic}}" alt=""> {{if item.tip}}
                         <span class="tip">{{item.tip}}</span>{{/if}}
                         <p class="msg">{{item.msg}}</p>
-                        <p>{{item.time}}<span><img class="star" src="/imges/社区-首页/star.png" alt=""><sup>{{item.star}}</sup></span><span><img class="like" src="/imges/社区-首页/like.png" alt=""><sup>{{item.like}}</sup></span></p>
+                        <p>{{item.showTime}}<span><img class="star" src="/imges/社区-首页/star.png" alt=""><sup>{{item.star}}</sup></span><span><img class="like" src="/imges/社区-首页/like.png" alt=""><sup>{{item.like}}</sup></span></p>
                         <p>添加评论....</p>
                     </li>
                     {{/each}}
