--- a/views/snsContent.html
+++ b/views/snsContent.html
@@ -111,7 +111,7 @@
                 <img src="{{data.pic}}" alt=""> {{if data.tip}}
                 <span class="tip">{{data.tip}}</span> {{/if}}
                 <p class="msg">{{data.msg}}</p>
-                <p class="time">{{data.time}}<span><img class="star" src="/imges/社区-首页/star.png" alt=""><sup>{{data.star}}</sup></span><span><img class="like" src="/imges/社区-首页/like.png" alt=""><sup>{{data.like}}</sup></span></p>
+                <p class="time">{{data.showTime}}<span><img class="star" src="/imges/社区-首页/star.png" alt=""><sup>{{data.star}}</sup></span><span><img class="like" src="/imges/社区-首页/like.png" alt=""><sup>{{data.like}}</sup></span></p>
                 <p class="commit">添加评论....</p>
             </li>
         </ul>
