community-me我发布的帖子

--- a/views/community.html
+++ b/views/community.html
@@ -74,7 +74,7 @@
                                 {{else}}
                                 <img class="like" src="/imges/社区-首页/like.png" data-id="{{item.id}}">
                                 {{/if}}
-                                <i>{{item.like}}</i>
+                                <i>{{item.likeNum}}</i>
                             </span>
                         </p>
                     </section>
@@ -144,7 +144,7 @@
                         <p>{{item.showTime}}
                             <span>
                                 <img class="star" src="/imges/社区-首页/star.png" alt="">
-                                <sup>{{item.star}}</sup>
+                                <sup>{{item.starNum}}</sup>
                             </span>
                             <span>
                                 {{if item.istrue}}
