--- a/views/community-me.html
+++ b/views/community-me.html
@@ -37,7 +37,7 @@
         font-size: 11px;
     }
     
-    .user img {
+    .userpic img {
         width: 58px;
     }
     
@@ -141,7 +141,8 @@
     }
     
     .main2 {
-        display: none;
+        display: flex;
+        justify-content: center;
     }
     
     .main1 {
@@ -210,7 +211,7 @@
     <div>
         <div class="user_info">
             <div class="user_info_box">
-                <div class="user">
+                <div class="userpic">
                     <img src="/imges/发现/社区/user.png" alt="">
                 </div>
                 <div class="username">
@@ -244,17 +245,28 @@
 
 </div>
 <ul class="sns_tab_wrapper">
-    <li class="btn1"><span class="txt">帖子</span> <span>(0)</span></li>
+
+    <li class="btn1"><span class="txt">帖子</span> <span>{{data.length}}</span></li>
     <li class="btn2"><span>收藏</span> <span>(0)</span></li>
 </ul>
 
 <main class="main1 container ">
     <div class="left">
-        {{each data item index}} {{if index%2==0}}
+        {{each data.reverse() item index}} {{if index%2==0}}
         <section class="cet" data-id="{{item.time}}"><img src="/{{item.pic}}" alt="" class="show"> {{if item.tip}}
             <span class="tip">{{item.tip}}</span> {{/if}}
             <p class="msg">{{item.msg}}</p>
-            <p class="user"><img src="{{item.userPic}}" alt=""><span>{{item.username}}</span><span><img class="like" src="/imges/社区-首页/heart.png"> <i>{{item.like}}</i></span></p>
+            <p class="user">
+                <img src="{{item.userPic}}" alt="">
+                <span>{{item.username}}</span>
+                <span>
+                    {{if item.istrue}}
+                    <img class="like" src="/imges/社区-首页/like.svg" data-id="{{item.id}}"> 
+                    {{else}}
+                    <img class="like" src="/imges/社区-首页/like.png" data-id="{{item.id}}">
+                    {{/if}}
+                    <i>{{item.likeNum}}</i>
+                </span></p>
         </section>
         {{/if}} {{/each}}
     </div>
@@ -264,13 +276,24 @@
         <section class="cet" data-id="{{item.time}}"><img src="/{{item.pic}}" alt="" class="show"> {{if item.tip}}
             <span class="tip">{{item.tip}}</span> {{/if}}
             <p class="msg">{{item.msg}}</p>
-            <p class="user"><img src="{{item.userPic}}" alt=""><span>{{item.username}}</span><span><img class="like" src="/imges/社区-首页/heart.png"> <i>{{item.like}}</i></span></p>
+            <p class="user">
+                <img src="{{item.userPic}}" alt="">
+                <span>{{item.username}}</span>
+                <span>
+                    {{if item.istrue}}
+                    <img class="like" src="/imges/社区-首页/like.svg" data-id="{{item.id}}"> 
+                    {{else}}
+                    <img class="like" src="/imges/社区-首页/like.png" data-id="{{item.id}}">
+                    {{/if}}
+                    <i>{{item.likeNum}}</i>
+                </span>
+            </p>
         </section>
         {{/if}} {{/each}}
     </div>
 </main>
 
-<main class="main2">
+<main class="main2" style="display: none;">
     <div class="no-result">
         <div class="pic">
             <img src="/imges/发现/社区/bg3.svg" alt="">
@@ -296,10 +319,12 @@
         $('.main1').css('display', 'none')
         $('.main2').css('display', 'flex')
     })
-    $.get('/allNum',{username:$.cookie('username')},(data)=>{
+    $.get('/allNum', {
+        username: $.cookie('username')
+    }, (data) => {
         $('.count').eq(0).html(data.meStar)
         $('.count').eq(1).html(data.starMe)
         $('.count').eq(2).html(data.likeMe)
 
-    })  
+    })
 </script>
