--- a/views/home.html
+++ b/views/home.html
@@ -41,15 +41,15 @@
         <ul id="swiper-wrapper-5166ce487d6f5cbe" class="swiper-wrapper" aria-live="polite">
             {{each news datas}}
             <li class="swiper-slide" role="group" aria-label="({{index}}+1) /3"  >
-                {{each item news}}
+                {{each datas news}}
                 <div class="lb-box toDetail"  data-id="{{news.id}}">
                     <div class="img">
                         <img src="{{news.img[0]}}" alt="">
                         <div>NEW</div>
                     </div>
                     <div class="title">
-                        <p>{{items.h}}</p>
-                    <p><span>￥{{items.price}}</span><del class="old">￥{{ items.oldPrice}}</del></p>
+                        <p>{{news.h}}</p>
+                    <p><span>￥{{news.price}}</span><del class="old">￥{{ news.oldPrice}}</del></p>
                     </div>
                     
                 </div>
@@ -71,17 +71,10 @@
 
 <div class="show_box">
     <h1>热卖专区</h1>
-<<<<<<< HEAD
-    {{each list item a}}
-=======
-<<<<<<< HEAD
+
+
     {{each list item }}
-    <div class="list toDetail" data-id="home/{{item.id}}">
-=======
-    {{each data.list item a}}
->>>>>>> ed45edefa2e6d7bc987c0508b6fae2ba6fcebc69
     <div class="list toDetail" data-id="{{item.id}}">
->>>>>>> dcc27ec9184926e7e1b4518aff8897bffda5f1ac
         <div class="list_img">
             <img src="{{item.img[0]}}" alt="">
             <p class="tips">{{item.top}}</p>
