--- a/views/header.html
+++ b/views/header.html
@@ -9,7 +9,7 @@
     <script src="/bootstrap-3.3.7-dist/js/jquery-3.1.1.js"></script>
     <script src="/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
     <script src="/bootstrap-3.3.7-dist/js/jquery.cookie.js"></script>
-    <link rel="shortcut icon" href="/imges/favicon.icon" type="image/x-icon" s>
+    <link rel="shortcut icon" href="/imges/社区-首页/favicon.ico" type="image/x-icon">
     <style>
         * {
             margin: 0;
