--- a/views/fleshiness.html
+++ b/views/fleshiness.html
@@ -9,6 +9,7 @@
     <script src="/bootstrap-3.3.7-dist/js/jquery-3.1.1.js"></script>
     <script src="/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
     <link rel="stylesheet" href="/css/fleshinessCss/fleshiness.css">
+    <link rel="shortcut icon" href="/imges/社区-首页/favicon.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
