--- a/views/search.html
+++ b/views/search.html
@@ -10,6 +10,7 @@
     <script src="/bootstrap-3.3.7-dist/js/jquery-3.1.1.js"></script>
     <script src="/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
     <script src="/bootstrap-3.3.7-dist/js/jquery.cookie.js"></script>
+    <link rel="shortcut icon" href="/imges/社区-首页/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
