--- a/www/css/mineCSS/mine.less
+++ b/www/css/mineCSS/mine.less
@@ -39,16 +39,6 @@ body{
                 padding-left: 20px;
             }
             &>p{
-                text-align: center;
-                color: white;
-                margin-bottom: 20px;
-                height: 40px;
-                line-height: 40px;
-                border-radius: 3px;
-                background-color: rgb(64, 230, 64);
-                
-            }
-            &>button{
                 height: 40px;
                 line-height: 40px;
                 text-align: center;
@@ -57,6 +47,20 @@ body{
                 color: white;
                 background-color: #ccc;
                 border: none;
+                
+                
+            }
+            &>button{
+                text-align: center;
+                color: white;
+                margin-bottom: 20px;
+                height: 40px;
+                line-height: 40px;
+                border-radius: 3px;
+                background-color: rgb(64, 230, 64);
+                border: none;
+                width: 100%;
+                outline: none;
             }
         }
     }
