--- a/views/mine/tools/come_buy.html
+++ b/views/mine/tools/come_buy.html
@@ -47,7 +47,7 @@
             list-style: none;
             padding: 15px 0;
             display: flex;
-            flex-wrap: wrap;
+            /* flex-wrap: wrap; */
             
 
         }
