--- a/views/header.html
+++ b/views/header.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="referrer" content="no-referrer">
     <title>Document</title>
     <link rel="stylesheet" href="/bootstrap-3.3.7-dist/css/bootstrap.css">
     <script src="/bootstrap-3.3.7-dist/js/jquery-3.1.1.js"></script>
